Simplify maneuver logic and harden safety/type checks

--- a/botimus_settings.ini
+++ b/botimus_settings.ini
@@ -10,7 +10,7 @@ reload_interval = 1.0
 
 [Object]
 ; mode: auto | ball | puck
-mode = auto
+mode = ball
 
 ; For puck this should usually stay true.
 use_rlbot_prediction_for_puck = true
@@ -27,7 +27,7 @@ puck_render_radius = 105
 
 [Skill]
 ; Main rank-like preset controlling overall bot performance.
-preset = champion
+preset = grand_champion
 
 ; Set each to auto or a number from 0.0 to 1.0.
 overall = auto
@@ -53,3 +53,31 @@ conservative_last_man = true
 
 ; Lower means safer boost choices, higher means greedier boost choices.
 boost_detour_risk = 0.35
+
+[HumanStyle]
+; Set each to auto or a number.
+; decisiveness/role_stability/touch_reset_resist/mistake_rate/mechanical_variance: 0.0-1.0
+; takeover_bias: -1.0 to 1.0 (higher means more likely to take charge when a lane opens)
+; commit_hold_time/support_repath_cooldown: seconds
+; defense_turn_hysteresis: radians
+decisiveness = auto
+takeover_bias = auto
+role_stability = auto
+commit_hold_time = auto
+touch_reset_resist = auto
+mistake_rate = auto
+mechanical_variance = auto
+defense_turn_hysteresis = auto
+support_repath_cooldown = auto
+
+[Diagnostics]
+enabled = true
+; mode: coach_timeline | balanced | event
+mode = coach_timeline
+root_dir = logs/diagnostics
+flush_every = 60
+reset_on_start = true
+log_every_tick = true
+top_k_alternatives = 3
+include_snapshots = true
+include_opponent_cars = true
